# the-library

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage-baseline.txt  library-config.example.yaml  pyproject.toml  test_jira_fields.py
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/workflows/: test.yml
checkpoints/: 2026-04-15-capstone-proposal-and-architecture-checkpoint.md  2026-04-16-capstone-proposal-final-and-platform-overview-checkpoint.md
docs/guides/: pm-integration.md  skills-reference.md  vault-builder.md
docs/reference/: jira-api.md  mcp-tools.md  test-plan.md  vault-builder-api.md
docs/setup/: jira-setup.md  linear-setup.md  quickstart.md  reading-room-setup.md
docs/superpowers/plans/: 2026-04-12-jira-direct-integration.md
docs/superpowers/specs/: 2026-04-12-jira-direct-integration-design.md
scripts/: backfill_md_adf.py  smoke_md_adf.py  verify_adf.py
skills/: plugin.json
skills/audit/: SKILL.md
skills/checkpoint/: SKILL.md
skills/compile/: SKILL.md
skills/config/: SKILL.md
skills/ingest/: SKILL.md
skills/memory/: SKILL.md
skills/plan/: SKILL.md
skills/query/: SKILL.md
skills/review/: SKILL.md
skills/sync/: SKILL.md
skills/triage/: SKILL.md
src/: create_workflow.py  test_all_projects.py  test_create_project.py  test_epic.py  test_issue_types.py  test_issue_types_cos.py  update_cos2_final.py  update_remaining_tickets.py  update_tickets.py
src/library_server/: __init__.py  cli.py  config.py  server.py  types.py
src/library_server/checkpoint/: __init__.py  checkpoint.py
src/library_server/graph/: __init__.py  orchestrator.py
src/library_server/hooks/: config_loader.py  dedup.py  domain_scanner.py  installer.py  jira_client.py  learning.py  transcript.py
src/library_server/memory/: __init__.py  aggregate.py  decision_capture.py  domain_seeder.py  prune.py  scan.py
src/library_server/pm/: __init__.py  adapter.py  delete_project.py  jira.py  jira_client.py  linear.py  md_to_adf.py
src/library_server/state/: project_state.py  session_state.py
src/library_server/vault/: __init__.py  ingest.py  init.py  parse.py  validate.py
src/library_server/vault_builder/: __init__.py  config.py  graphify_runner.py  orchestrator.py  output.py  registry.py  types.py
tests/: conftest.py  test_checkpoint.py  test_cleanup_fixture.py  test_clerk_pollution_scan.py  test_cli.py  test_config.py  test_coverage_ratchet.py  test_graph.py  test_integration.py  test_jira_client.py  test_jira_integration.py  test_jira_workflow_walk.py  test_memory.py  test_mmu_integration.py  test_mutation_smoke.py  test_pm_adapter.py  test_pollution_scan.py  test_server.py  test_types_mmu.py  test_vault.py
tests/pm/: test_md_to_adf.py
tests/test_hooks/: test_config_loader.py  test_dedup.py  test_domain_scanner.py  test_installer.py  test_jira_client.py  test_learning.py  test_transcript.py
tests/test_hooks_scripts/: test_pre_compact.py  test_prompt_scan.py  test_session_end.py  test_session_start.py  test_status_line.py  test_stop_capture.py  test_token_tracker.py
tests/test_memory_mmu/: test_decision_capture.py  test_domain_seeder.py
tests/test_state/: test_project_state.py  test_session_state.py
tests/vault_builder/: conftest.py  test_config.py  test_graphify_runner.py  test_orchestrator.py  test_output.py  test_registry.py  test_types.py
tests/vault_builder/extractors/: test_axon_bridge.py  test_base.py  test_claude_memory.py  test_jira.py  test_notebooklm.py  test_obsidian_vault.py  test_session_context.py  test_specs.py
(+18 files in other folders)
