[project]
name = "the-library"
version = "0.3.0"
description = "Open-source meta-system for AI-assisted project management. MCP server + Claude Code skills."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SevenBelow LLC", email = "dev@sevenbelow.io"},
]
keywords = ["mcp", "claude-code", "knowledge-management", "project-management", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
jira = []
linear = []
graphify = ["graphifyy>=0.3.0"]
axon = ["axoniq>=1.0.0"]
all = ["httpx>=0.27.0", "graphifyy>=0.3.0", "axoniq>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "graphifyy>=0.3.0",
    "axoniq>=1.0.0",
]

[project.scripts]
library-server = "library_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/library_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
