[project]
name = "the-library"
version = "0.3.1"
description = "Open-source meta-system for AI-assisted project management. MCP server + Claude Code skills."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SevenBelow LLC", email = "dev@sevenbelow.com"},
]
keywords = ["mcp", "claude-code", "knowledge-management", "project-management", "ai-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Jira uses Atlassian MCP (no extra packages needed)
# Linear uses httpx (already a core dependency)
graphify = ["graphifyy>=0.3.0"]
# `axon` is a system CLI binary (located via shutil.which); not a Python
# dependency. The `axon` extra previously listed `axoniq>=1.0.0` which is
# not published on PyPI and broke `pip install -e ".[dev]"` (see
# the-library CI runs 2026-04-18). Operators provision the CLI separately.
all = ["graphifyy>=0.3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "graphifyy>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/sevenbelowllc/the-library"
Repository = "https://github.com/sevenbelowllc/the-library.git"
"Bug Tracker" = "https://github.com/sevenbelowllc/the-library/issues"
Changelog = "https://github.com/sevenbelowllc/the-library/blob/main/CHANGELOG.md"

[project.scripts]
library = "library_server.cli:main"
library-server = "library_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/library_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/library_server --cov-report=term-missing --cov-fail-under=88"
